# sandbox-gfx

./: .bazelrc  .clang-format  .clang-tidy  .cmake-format  .dextool_mutate.toml  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE.bazel  pyproject.toml  requirements.txt  setup.cfg
cmake/: clang_tidy.cmake  clang_toolchain.cmake  gcc_toolchain.cmake  gfx_executable_target.cmake  gfx_static_library_target.cmake  git.cmake  hotfix.imp  ignore_macro.cmake  ignore_target.cmake  iwyu.cmake  pkgconfig_import_macro.cmake
doc/: gfx_checks.md
doc/scripts/: planar_ranging.py
gfx/: README.md  workspace_dependencies.bzl
gfx/applications/: applicationsTargets.cmake  demo_application.cpp  demo_application.hpp  demo_application_main.cpp  dummy_texture.cpp  dummy_texture.hpp  gamepad_demo_main.cpp  headless_main.cpp  muxing_main.cpp  opengl_compute_shader_main.cpp  texture_compute_main.cpp
gfx/compute/: BUILD.bazel  README.md  circle.cu  circle.cuh  circle_texture.cu  circle_texture.cuh  computeTargets.cmake  context.cpp  context.hpp  pixel_buffer.cpp  pixel_buffer.hpp  read_texture.cu  read_texture.cuh  render_buffer.cpp  render_buffer.hpp  texture_buffer.cpp  texture_buffer.hpp
gfx/compute/detail/: check_cuda_call.hpp
gfx/compute/utils/: compute_dump.cpp  compute_dump.hpp
gfx/graphics/: BUILD.bazel  graphicsTargets.cmake  quad.cpp  quad.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
gfx/graphics/detail/: compile_shader_program.cpp  compile_shader_program.hpp
gfx/graphics/utils/: graphics_dump.cpp  graphics_dump.hpp
gfx/input/: BUILD.bazel  gamepad.cpp  gamepad.hpp  inputTargets.cmake
gfx/shaders/: BUILD.bazel  basic.fragment.glsl  basic.vertex.glsl  texture.fragment.glsl  texture.vertex.glsl  yuv.compute.glsl
gfx/shaders/glsl_source_package/: BUILD.bazel  rule_glsl_source.bzl  rule_glsl_source_test.bzl
gfx/shmem/: check_for_error.hpp  reader.cpp  reader.hpp  system_resourcesTargets.cmake  writer.cpp  writer.hpp
gfx/test/: arg_parser_test.cpp  argparse_test.cpp  color_stream_operator.hpp  color_test.cpp  pip_output_parser_test.cpp  shmem_test.cpp  size_test.cpp  unit_tests.cmake  uri_test.cpp
gfx/test/fuzz/: fuzzTargets.cmake  uri.cpp
gfx/utils/: BUILD.bazel  arg_parser.cpp  arg_parser.hpp  demuxer.c  demuxer.cpp  demuxer.hpp  json_parser.cpp  json_parser.hpp  libav_string_fix.hpp  logger.cpp  logger.hpp  logger_stub.cpp  muxer.cpp  muxer.hpp  pip_output_parser.hpp  pip_output_parser_main.cpp  timestamp.hpp  utilsTargets.cmake
gfx/utils/argparse/: demo_parse_main.c  logging.c  logging.h  options.c  options.h  parse.c  parse.h  print.c  print.h
gfx/vocabulary/: BUILD.bazel  color.hpp  size.hpp  time.hpp  uri.cpp  uri.hpp  vocabularyTargets.cmake
gfx/vulkan/: BUILD.bazel  README.md  application.cpp  application.hpp  context.cpp  context.hpp  main.cpp  shader.cpp  shader.hpp  vulkanTargets.cmake
gfx/vulkan/rules_glslc/: defs.bzl  rules.bzl
gfx/vulkan/shaders/: shader.frag.glsl  shader.vert.glsl
scripts/: append_env.sh  generate-dummy-videos  logging.sh  search-and-replace  search_and_replace.sh
tools/: glm.imp  glsl_file_to_string.py  hotfix.imp  logger.py  lsan.supp  run_applications.py  test_logger.py  ubsan.supp
tools/clang_format/: README.md  clang_format.bzl  factory.bzl  runner.bash.template
tools/fake/: dlclose.c
tools/find_comments/: find_comments.py  find_comments_main.py  test_find_comments.py
