cc_library(
    name = "window",
    srcs = ["window.cpp"],
    hdrs = ["window.hpp"],
    copts = ["-std=c++20"],
    strip_include_prefix = "/gfx",
    visibility = ["//visibility:public"],
    deps = [
        "//gfx/vocabulary",
        "@glew//:GLEW",
        "@glfw",
    ],
)

cc_library(
    name = "components",
    srcs = [
        "detail/compile_shader_program.cpp",
        "quad.cpp",
        "shader.cpp",
        "texture.cpp",
    ],
    hdrs = [
        "detail/compile_shader_program.hpp",
        "quad.hpp",
        "shader.hpp",
        "texture.hpp",
    ],
    copts = ["-std=c++20"],
    strip_include_prefix = "/gfx",
    visibility = ["//visibility:public"],
    deps = [
        "//gfx/vocabulary",
        "@glew//:GLEW",
    ],
)

cc_library(
    name = "dump",
    srcs = [
        "utils/graphics_dump.cpp",
    ],
    hdrs = [
        "utils/graphics_dump.hpp",
    ],
    copts = ["-std=c++20"],
    strip_include_prefix = "/gfx",
    visibility = ["//visibility:public"],
    deps = [
        "//gfx/utils:logger",
        "@stb",
    ],
)
