exports_files([
    "timestamp.hpp",
    "muxer.hpp",
    "muxer.cpp",
    "libav_string_fix.hpp",
])

cc_library(
    name = "arg_parser",
    srcs = [
        "arg_parser.cpp",
    ],
    hdrs = [
        "arg_parser.hpp",
    ],
    copts = ["-std=c++20"],
    linkopts = ["-lboost_program_options"],
    strip_include_prefix = "/gfx",
    visibility = ["//visibility:public"],
    deps = ["//gfx/vocabulary"],
)

cc_library(
    name = "logger",
    srcs = [
        "logger.cpp",
    ],
    hdrs = [
        "logger.hpp",
    ],
    copts = ["-std=c++20"],
    strip_include_prefix = "/gfx",
    visibility = ["//visibility:public"],
)
