cc_library(
    name = "vocabulary",
    srcs = ["uri.cpp"],
    hdrs = [
        "color.hpp",
        "size.hpp",
        "time.hpp",
        "uri.hpp",
    ],
    copts = ["-std=c++20"],
    strip_include_prefix = "/gfx",
    visibility = ["//visibility:public"],
    deps = ["//gfx/utils:logger"],
)
